crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_multi_status_shared_body_types.snap
---
source: crates/phoenix-codegen/src/go_tests.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

package api

type User struct {
	Id   int64  `json:"id"`
	Name string `json:"name"`
}

type UpsertUserResponse struct {
	Status int   `json:"status"`
	Body   *User `json:"body,omitempty"`
}
