crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_multi_types.snap
---
source: crates/phoenix-codegen/src/go.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

package api

type User struct {
	Id    int64  `json:"id"`
	Name  string `json:"name"`
	Email string `json:"email"`
}

type CreateUserBody struct {
	Name  string `json:"name"`
	Email string `json:"email"`
}
