crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_multipart_opt_types.snap
---
source: crates/phoenix-codegen/src/go.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

package api

import (
	"io"
	"mime/multipart"
)

type Doc struct {
	Id int64 `json:"id"`
}

type UploadDocBody struct {
	Attachment *multipart.FileHeader `json:"attachment"`
	Title      string                `json:"title"`
}

// FileUpload is the client-side representation of a file part in a
// multipart request body: a filename and a reader yielding its bytes.
type FileUpload struct {
	Filename string    `json:"filename"`
	Content  io.Reader `json:"-"`
}

// UploadDocClientBody is the client-side request body for the multipart
// upload endpoint; the server-side parsed form is UploadDocBody.
type UploadDocClientBody struct {
	Attachment *FileUpload `json:"attachment"`
	Title      string      `json:"title"`
}
