crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_multipart_req_server.snap
---
source: crates/phoenix-codegen/src/go.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

package api

import (
	"encoding/json"
	"net/http"
)

// NewRouter creates an http.ServeMux that routes requests to the given handlers.
func NewRouter(h Handlers) *http.ServeMux {
	mux := http.NewServeMux()
	mux.HandleFunc("POST /api/avatar", func(w http.ResponseWriter, r *http.Request) {
		if err := r.ParseMultipartForm(32 << 20); err != nil {
			http.Error(w, err.Error(), http.StatusBadRequest)
			return
		}
		defer func() { _ = r.MultipartForm.RemoveAll() }()
		var body UploadAvatarBody
		fAvatar, fhAvatar, err := r.FormFile("avatar")
		if err != nil {
			http.Error(w, err.Error(), http.StatusBadRequest)
			return
		}
		_ = fAvatar.Close()
		body.Avatar = fhAvatar
		body.Caption = r.FormValue("caption")
		result, err := h.UploadAvatar(body)
		if err != nil {
			http.Error(w, err.Error(), http.StatusInternalServerError)
			return
		}
		w.Header().Set("Content-Type", "application/json")
		json.NewEncoder(w).Encode(result)
	})
	return mux
}
