crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_multipart_req_types.snap
---
source: crates/phoenix-codegen/src/go.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

package api

import (
	"io"
	"mime/multipart"
)

type User struct {
	Id   int64  `json:"id"`
	Name string `json:"name"`
}

type UploadAvatarBody struct {
	Avatar  *multipart.FileHeader `json:"avatar"`
	Caption string                `json:"caption"`
}

// FileUpload is the client-side representation of a file part in a
// multipart request body: a filename and a reader yielding its bytes.
type FileUpload struct {
	Filename string    `json:"filename"`
	Content  io.Reader `json:"-"`
}

// UploadAvatarClientBody is the client-side request body for the multipart
// upload endpoint; the server-side parsed form is UploadAvatarBody.
type UploadAvatarClientBody struct {
	Avatar  FileUpload `json:"avatar"`
	Caption string     `json:"caption"`
}
