crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_multipart_two_files_client.snap
---
source: crates/phoenix-codegen/src/go.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

package api

import (
	"bytes"
	"encoding/json"
	"fmt"
	"io"
	"mime/multipart"
	"net/http"
)

// ApiClient is a typed HTTP client for the API.
type ApiClient struct {
	BaseURL string
	Client  *http.Client
}

// NewApiClient creates a new API client with the given base URL.
func NewApiClient(baseURL string) *ApiClient {
	return &ApiClient{BaseURL: baseURL, Client: http.DefaultClient}
}
func (c *ApiClient) UploadBoth(body UploadBothClientBody) (*Ok, error) {
	u := fmt.Sprintf("%s/api/both", c.BaseURL)
	var buf bytes.Buffer
	writer := multipart.NewWriter(&buf)
	{
		part, err := writer.CreateFormFile("first", body.First.Filename)
		if err != nil {
			return nil, err
		}
		if _, err := io.Copy(part, body.First.Content); err != nil {
			return nil, err
		}
	}
	{
		part, err := writer.CreateFormFile("second", body.Second.Filename)
		if err != nil {
			return nil, err
		}
		if _, err := io.Copy(part, body.Second.Content); err != nil {
			return nil, err
		}
	}
	if err := writer.Close(); err != nil {
		return nil, err
	}
	req, err := http.NewRequest("POST", u, &buf)
	if err != nil {
		return nil, err
	}
	req.Header.Set("Content-Type", writer.FormDataContentType())
	resp, err := c.Client.Do(req)
	if err != nil {
		return nil, err
	}
	defer resp.Body.Close()
	if resp.StatusCode >= 400 {
		return nil, fmt.Errorf("HTTP %d", resp.StatusCode)
	}
	var result Ok
	if err := json.NewDecoder(resp.Body).Decode(&result); err != nil {
		return nil, err
	}
	return &result, nil
}
