crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_opt_header_client.snap
---
source: crates/phoenix-codegen/src/go_tests.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

package api

import (
	"encoding/json"
	"fmt"
	"net/http"
)

// ApiClient is a typed HTTP client for the API.
type ApiClient struct {
	BaseURL string
	Client  *http.Client
}

// NewApiClient creates a new API client with the given base URL.
func NewApiClient(baseURL string) *ApiClient {
	return &ApiClient{BaseURL: baseURL, Client: http.DefaultClient}
}
func (c *ApiClient) GetUser(id string, traceId *string) (*User, error) {
	u := fmt.Sprintf("%s/api/users/%s", c.BaseURL, id)
	req, err := http.NewRequest("GET", u, nil)
	if err != nil {
		return nil, err
	}
	if traceId != nil {
		req.Header.Set("Trace-Id", *traceId)
	}
	resp, err := c.Client.Do(req)
	if err != nil {
		return nil, err
	}
	defer resp.Body.Close()
	if resp.StatusCode >= 400 {
		return nil, fmt.Errorf("HTTP %d", resp.StatusCode)
	}
	var result User
	if err := json.NewDecoder(resp.Body).Decode(&result); err != nil {
		return nil, err
	}
	return &result, nil
}
